--- a/templates/telephone_portable/show.html.twig
+++ b/templates/telephone_portable/show.html.twig
@@ -139,7 +139,7 @@
                                             </tr>
                                         {% endif %}
                                         <tr id="noResultsRow" class="align-middle text-center" style="display: none;">
-                                            <td colspan="13">Aucune téléphone portable n'a été trouvé.</td>
+                                            <td colspan="13">Aucun téléphone portable n'a été trouvé.</td>
                                         </tr>
                                     </tbody>
                                 </table>
