--- a/templates/stockage/edit.html.twig
+++ b/templates/stockage/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'gui/base.html.twig' %}
 
-{% block title %}Éditer le type de stockage | Inventaire{% endblock %}
+{% block title %}Édition du type de stockage{% endblock %}
 
 {% block body %}
     <div class="d-flex mb-4 mt-3">
@@ -26,10 +26,13 @@
             {% endfor %}
             <div class="sticky-sidebar">
                 <div class="card mb-3">
-                    <div class="card-header d-flex flex-between-center">
-                        <h5 class="mb-0">Éditer un type de stockage</h5>
-                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.stockage.show') }}">
-                            Retour
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h5 class="mb-0">
+                            Édition d'un type de stockage
+                        </h5>
+                        <a class="btn btn-primary btn-sm" href="{{ path('admin.stockage.show') }}">
+                            <span class="fas fa-circle-left"></span>
+                            &nbsp;Retour
                         </a>
                     </div>
                     <div class="card-body bg-light">
@@ -40,7 +43,7 @@
                                 Champs obligatoires
                             </label>
                             <div class="d-flex justify-content-end">
-                                <button class="btn btn-primary me-1 mb-1" type="submit">Éditer</button>
+                                <button class="btn btn-primary me-1 mb-1" type="submit">Sauvegarder</button>
                             </div>
                         {{ form_end(stockageForm) }}
                     </div>
