--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'gui/base.html.twig' %}
 
-{% block title %}Accueil | Inventaire{% endblock %}
+{% block title %}Accueil{% endblock %}
 
 {% block body %}
     <div class="d-flex mb-4 mt-3">
