--- a/templates/stockage/edit.html.twig
+++ b/templates/stockage/edit.html.twig
@@ -28,7 +28,7 @@
                 <div class="card mb-3">
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <h5 class="mb-0">
-                            Édition d'un type de stockage
+                            Édition du type de stockage
                         </h5>
                         <a class="btn btn-primary btn-sm" href="{{ path('admin.stockage.show') }}">
                             <span class="fas fa-circle-left"></span>
