--- a/templates/tablette/edit.html.twig
+++ b/templates/tablette/edit.html.twig
@@ -34,7 +34,7 @@
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <h5 class="mb-0">
                             <span class="fas fa-edit"></span>
-                            &nbsp;Édition d'une tablette
+                            &nbsp;Édition de la tablette
                         </h5>
                         <div>
                             <a class="btn btn-primary btn-sm" href="#qrCodeImage">
