--- a/templates/entreprise/edit.html.twig
+++ b/templates/entreprise/edit.html.twig
@@ -29,7 +29,7 @@
                     <div class="card-header d-flex flex-between-center">
                         <h5 class="mb-0">
                             <span class="fas fa-edit"></span>
-                            &nbsp;Édition un site
+                            &nbsp;Édition du site
                         </h5>
                         <a class="btn btn-primary btn-sm" href="{{ path('admin.entreprise.show') }}">
                             <span class="fas fa-circle-left"></span>
