--- a/templates/etat/edit.html.twig
+++ b/templates/etat/edit.html.twig
@@ -29,7 +29,7 @@
                     <div class="card-header d-flex flex-between-center">
                         <h5 class="mb-0">
                             <span class="fas fa-edit"></span>
-                            &nbsp;Édition un état</h5>
+                            &nbsp;Édition de l'état</h5>
                         <a class="btn btn-primary btn-sm" href="{{ path('admin.etat.show') }}">
                             <span class="fas fa-circle-left"></span>
                             &nbsp;Retour
