--- a/templates/telephone_portable/edit.html.twig
+++ b/templates/telephone_portable/edit.html.twig
@@ -34,7 +34,7 @@
                     <div class="card-header d-flex flex-between-center">
                         <h5 class="mb-0">
                             <span class="fas fa-edit"></span>
-                            &nbsp;Édition d'un téléphone portable
+                            &nbsp;Édition du téléphone portable
                         </h5>
                         <a class="btn btn-primary btn-sm" href="{{ path('admin.telephone_portable.show') }}">
                             <span class="fas fa-circle-left"></span>
