--- a/templates/utilisateur/create.html.twig
+++ b/templates/utilisateur/create.html.twig
@@ -1,6 +1,6 @@
 {% extends 'gui/base.html.twig' %}
 
-{% block title %}Ajouter un utilisateur | Inventaire{% endblock %}
+{% block title %}Création d'un utilisateur{% endblock %}
 {% block stylesheets %}
     <link href="{{ asset('assets/vendors/select2/select2.min.css') }}" rel="stylesheet" />
     <link href="{{ asset('assets/vendors/select2-bootstrap-5-theme/select2-bootstrap-5-theme.min.css') }}" rel="stylesheet" />
@@ -17,7 +17,7 @@
                 <span class="bg-200 dark__bg-1100 pe-3">Utilisateurs</span>
                 <span class="border position-absolute top-50 translate-middle-y w-100 start-0 z-n1"></span>
             </h5>
-            <p class="mb-0">Cette page vous permet d'ajouter un utilisateur.</p>
+            <p class="mb-0">Cette page vous permet de créer un utilisateur.</p>
         </div>
     </div>
     <div class="row g-0">
@@ -31,9 +31,13 @@
             <div class="sticky-sidebar">
                 <div class="card mb-3">
                     <div class="card-header d-flex flex-between-center">
-                        <h5 class="mb-0">Ajouter un utilisateur</h5>
-                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.utilisateur.show') }}">
-                            Retour
+                        <h5 class="mb-0">
+                            <span class="fas fa-circle-plus"></span>
+                            &nbsp;Création d'un utilisateur
+                        </h5>
+                        <a class="btn btn-primary btn-sm" href="{{ path('admin.utilisateur.show') }}">
+                            <span class="fas fa-circle-left"></span>
+                            &nbsp;Retour
                         </a>
                     </div>
                     <div class="card-body bg-light">
@@ -47,7 +51,7 @@
                                 Champs obligatoires
                             </label>
                             <div class="d-flex justify-content-end">
-                                <button class="btn btn-primary me-1 mb-1" type="submit">Créer</button>
+                                <button class="btn btn-primary me-1 mb-1" type="submit">Sauvegarder</button>
                             </div>
                         {{ form_end(utilisateurForm) }}
                     </div>
