--- a/templates/emplacement/show.html.twig
+++ b/templates/emplacement/show.html.twig
@@ -37,7 +37,7 @@
                         </a>
                     </div>
                     <div class="card-body bg-light">
-                        <div id="table_emplacements" data-list='{"page":20,"pagination":true}'>
+                        <div id="table_emplacements">
                             <div class="row justify-content-end g-0">
                                 <div class="col-auto mb-3">
                                     <div class="input-group">
@@ -64,7 +64,7 @@
                                         {% if emplacements | length != 0 %}
                                             {% for emplacement in emplacements %}
                                                 <tr class="align-middle text-center">
-                                                    <td class="text-nowrap">{{ loop.revindex }}</td>
+                                                    <td class="text-nowrap">{{ emplacement.id }}</td>
                                                     <td class="text-nowrap nom">
                                                         <a href="{{ path('admin.emplacement.edit', {id: emplacement.id}) }}"><b>{{ emplacement.nom }}</b></a>
                                                     </td>
@@ -94,14 +94,9 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="d-flex justify-content-center mt-3">
-                                <button class="btn btn-sm btn-falcon-default me-1" type="button" title="Précédent" data-list-pagination="prev">
-                                    <span class="fas fa-chevron-left"></span>
-                                </button>
-                                <ul class="pagination mb-0"></ul>
-                                <button class="btn btn-sm btn-falcon-default ms-1" type="button" title="Suivant" data-list-pagination="next">
-                                    <span class="fas fa-chevron-right"></span>
-                                </button>
+                            <br>
+                            <div class="d-flex justify-content-center align-items-center">
+                                {{ knp_pagination_render(emplacements) }}
                             </div>
                         </div>
                     </div>
