--- a/templates/entreprise/show.html.twig
+++ b/templates/entreprise/show.html.twig
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                     <div class="card-body bg-light">
-                        <div id="table_sites" data-list='{"page":20,"pagination":true}'>
+                        <div id="table_sites">
                             <div class="row justify-content-end g-0">
                                 <div class="col-auto mb-3">
                                     <div class="input-group">
@@ -66,7 +66,7 @@
                                         {% if entreprises | length != 0 %}
                                             {% for entreprise in entreprises %}
                                                 <tr class="align-middle text-center">
-                                                    <td class="text-nowrap">{{ loop.revindex }}</td>
+                                                    <td class="text-nowrap">{{ entreprise.id }}</td>
                                                     <td class="text-nowrap">
                                                         <a href="{{ path('admin.entreprise.edit', {id: entreprise.id}) }}"><b>{{ entreprise.nom }}</b></a>
                                                     </td>
@@ -96,14 +96,9 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="d-flex justify-content-center mt-3">
-                                <button class="btn btn-sm btn-falcon-default me-1" type="button" title="Précédent" data-list-pagination="prev">
-                                    <span class="fas fa-chevron-left"></span>
-                                </button>
-                                <ul class="pagination mb-0"></ul>
-                                <button class="btn btn-sm btn-falcon-default ms-1" type="button" title="Suivant" data-list-pagination="next">
-                                    <span class="fas fa-chevron-right"></span>
-                                </button>
+                            <br>
+                            <div class="d-flex justify-content-center align-items-center">
+                                {{ knp_pagination_render(entreprises) }}
                             </div>
                         </div>
                     </div>
